# jkr-windows-airtable

./: .gitignore  main.py  pyproject.toml  requirements.txt
.github/workflows/: cloud-functions.yaml
airtable/: airtable_controller.py  airtable_repo.py  airtable_service.py  test_airtable_repo.py  test_airtable_service.py
airtable/pipeline/: __init__.py  interface.py  sout_sales_calendar.py  utils.py
db/: bigquery.py
tasks/: cloud_tasks.py
