[tool.poetry]
name = "jkr-windows-airtable"
version = "1.0"
description = ""
authors = ["HM <hieumdd@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
google-cloud-bigquery = "^2.27.1"
httpx = "^0.22.0"
compose = "^1.2.8"
dateparser = "^1.1.1"
google-cloud-tasks = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^22.3.0"
mypy = "^0.910"
types-dateparser = "^1.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-s --durations=0"
testpaths = []

[tool.mypy]
python_version = 3.9
ignore_missing_imports = true
namespace_packages = true
